--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,8 +4,28 @@
   <div class="container">
     <h1>Welcome to English Clubs!</h1>
     <p class="lead">Expand your world!</p>
+    <br>
+    <div class="row" style="margin:0px;">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div class="input-group">
+          <input style="border:none;" type="text" class="form-control" placeholder="Enter a location near you">
+          <span class="input-group-btn">
+            <button class="btn btn-warning" type="button" style="font-weight:bold;">Search</button>
+          </span>
+        </div><!-- /input-group -->
+      </div>
+      <div class="col-md-3"></div>
+    </div>
   </div>
 </header>
+
+<div class="container">
+  <h1 style="text-align:center;">
+    Trending Clubs
+  </h1>
+
+</div>
 
 <div class="container">
   <div class="row">
@@ -30,8 +50,8 @@
 
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
-  </div>
-</footer>
+    <p>Angular Fullstack v2.0.13 |
+      <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
+      <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+    </div>
+  </footer>
