--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -69,7 +69,7 @@
 <div style="position:relative;">
   <header class="hero-unit" id="banner">
     <div class="container">
-      <h1>LDS English Clubs!</h1>
+      <h1>LDS English Clubs</h1>
       <p class="lead">Expand your world!</p>
       <br>
       <div>
