added google auto complete directive

--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/club/club.controller.js"></script>
           <script src="app/club/club.js"></script>
+          <script src="app/googlePlacesInput/googlePlacesInput.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/search/search.controller.js"></script>
@@ -89,5 +90,7 @@
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
+
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
 </body>
 </html>
