--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -80,7 +80,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
           <div class="input-group" style="box-shadow: 0px 0px 10px 1px #000;">
-            <input type="text" class="form-control" placeholder="Enter a location near you">
+            <input type="text" class="form-control" placeholder="Enter a location near you" google-places-input>
             <span class="input-group-btn">
               <button class="btn btn-warning" type="button" style="font-weight:bold;">Search</button>
             </span>
