--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -289,6 +289,17 @@
 
 <footer class="footer">
   <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <a href="/submit_listing">
+          Submit a Club
+        </a>
+      </div>
+      <div class="col-md-4">
+      </div>
+      <div class="col-md-4">
+      </div>
+    </div>
     <hr>
     <p>
       Copyright © 2015 <b>LDS English Club</b>. All Rights Reserved.
