--- a/client/app/submit_listing/submit_listing.html
+++ b/client/app/submit_listing/submit_listing.html
@@ -1,81 +1,88 @@
-<div class="container">
-	<form class="form-horizontal">
-		{{listing}}
+<!-- HEADER -->
+<div ng-include="'components/navbar/navbar.html'"></div>
+<div class="container" style="padding-top:50px;">
+	<form>
+		<h1>Submit a Club</h1>
 		<hr>
-		{{listing.title = title}}
-		<div class="form-group">
-			<label>Class Title</label>
+		<div class="form-group col-md-6" style="padding-left:0px;">
+			{{listing.title = title}}
+			<label>Title</label>
     		<input ng-model="title" class="form-control" placeholder="Enter Title">
+		</div>
+		<div class="form-group col-md-6" style="padding-right:0px;">
+			{{listing.subtitle = subtitle}}
+			<label>Subtitle</label>
+    		<input ng-model="subtitle" class="form-control" placeholder="Enter Subtitle">
 		</div>
 		</hr>
 		
 		<hr>
-		{{listing.subtitle = subtitle}}
-		<div class="form-group">
-			<label>Class Subtitle</label>
-    		<input ng-model="subtitle" class="form-control" placeholder="Enter Subtitle">
-		</div>
-		</hr>
 
 		<div class="form-group">
-			<label>Address of Class</label>
-		    <input type="text" style="box-shadow: 0px 0px 10px 1px #000;" class="form-control" placeholder="Enter the Address of the class location" google-places-input>
+			<label>Address</label>
+		    <input type="text" class="form-control" placeholder="Enter the Address of the class location" google-places-input>
 		</div>
 		
 		<div class="form-group">
 			{{listing.description = description}}
-			<label> Class Description
+			<label>Description
 		  	</label>
 			<textarea ng-model="description" class="form-control" rows="3" placeholder="Give a short desciption of your class."></textarea>
 		</div>
 		<hr>
-		<div class="form-group">
-			<button type="submit" class="btn btn-primary">press me</button>
+		<div class="row">
+			<div class="col-md-4" style="border:1px solid #e0e0e0;" ng-repeat="class in listing.classes">
+				<h2 style="text-align:center;">Time Slot</h2>
+				<hr>
+				<!--day of the week-->
+				<div class="form-group">
+					<select class="form-control" ng-model="class.day">
+						<option value="">Select a Day</option>
+						<option value="Monday">Monday</option>
+						<option value="Tuesday">Tuesday</option>
+						<option value="Wednesday">Wednesday</option>
+						<option value="Thursday">Thursday</option>
+						<option value="Friday">Friday</option>
+						<option value="Saturday">Saturday</option>
+						<option value="Sunday">Sunday</option>
+					</select>
+				</div>
+				<!-- starting time div -->
+				<div class="col-xs-6">
+					<label class="control-label"> Starting Time
+				  	</label>
+					<timepicker ng-model="class.start_time" ng-change="changed(  )" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
+				</div>
+				<!-- ending time div -->
+				<div class="col-xs-6">
+				  	<label class="control-label"> Ending Time
+				  	</label>
+				  <timepicker ng-model="class.end_time" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
+				</div>
+				<div class="form-group">
+					<label> Curriculum
+				  	</label>
+				  	{{listing.classes.curriculum = curriculum}}
+					<textarea ng-model="class.curriculum" class="form-control" rows="3" placeholder="Give a short overview of what you will teach."></textarea>
+				</div>
+			</div>
 		</div>
-		<!--day of the week-->
-		<div class="form-group">
-			<select class="form-control">
-				<option>Monday</option>
-				<option>Tuesday</option>
-				<option>Wednesday</option>
-				<option>Thursday</option>
-				<option>Friday</option>
-				<option>Saturday</option>
-				<option>Sunday</option>
-			</select>
-		</div>
-		<!-- starting time div -->
-		<div class="form-group" ng-controller="SubmitListingCtrl">
-			<label class="control-label"> Starting Time
-		  	</label>
-			<timepicker ng-model="start_time" ng-change="changed(  )" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
+			
 
-		  	<!--<pre class="alert alert-info">Time is: {{mytime | date:'shortTime' }}</pre>-->
-		</div>
-		<!-- ending time div -->
-		<div class="form-group" ng-controller="SubmitListingCtrl">
-		  	<label class="control-label"> Ending Time
-		  	</label>
-		  	{{listing.classes.end = mytime | date:'shortTime' }}
-		  <timepicker ng-model="end_time" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
-
-		  <!--<pre class="alert alert-info">Time is: {{mytime | date:'shortTime' }}</pre>-->
-		</div>
-
+		<br>
 		<div class="form-group">
-			<label> Curriculum
-		  	</label>
-		  	{{listing.classes.curriculum = curriculum}}
-			<textarea ng-model="curriculum" class="form-control" rows="3" placeholder="Give a short overview of what you will teach."></textarea>
+			<button ng-click="addTimeSlot()" class="btn btn-warning">Add Another Time Slot</button>
 		</div>
-	</hr>
-	<hr>
+		<hr>
+		
 		<div class="form-group">
 			<button type="submit" class="btn btn-primary">Submit to Admin</button>
 		</div>
-	</hr>
+	
 	</form>
 </div>
+<hr>
+{{listing}}
 <!--curriculm, title, subtitle-->
 
 <!-- ng-repeat="" "egghead io for tutorial"
