--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
       <link rel="stylesheet" href="app/club/club.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/search/search.css">
+      <link rel="stylesheet" href="app/submit_listing/submit_listing.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -82,6 +83,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/search/search.controller.js"></script>
           <script src="app/search/search.js"></script>
+          <script src="app/submit_listing/submit_listing.controller.js"></script>
+          <script src="app/submit_listing/submit_listing.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
