*Create listing creates a listing in the database, but does not yet validate errors *Added listing seed data. *Search data pulls listings from db, but not in correct location yet *Added create listing link to home *Updated listing model to not allow improper listings, and start with default values

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -289,7 +289,7 @@
 
 <footer class="footer">
   <div class="container">
-    <div class="row">
+    <div class="row" style="text-align:left;">
       <div class="col-md-4">
         <a href="/submit_listing">
           Submit a Club
