--- a/client/app/submit_listing/submit_listing.html
+++ b/client/app/submit_listing/submit_listing.html
@@ -20,7 +20,7 @@
 
 		<div class="form-group">
 			<label>Address</label>
-		    <input type="text" class="form-control" placeholder="Enter the Address of the class location" google-places-input>
+		    <input type="text" class="form-control" placeholder="Enter the Address of the class location" id="googleGetLocation">
 		</div>
 		
 		<div class="form-group">
@@ -76,7 +76,7 @@
 		<hr>
 		
 		<div class="form-group">
-			<button type="submit" class="btn btn-primary">Submit to Admin</button>
+			<button ng-click="submitListing()" class="btn btn-primary">Submit to Admin</button>
 		</div>
 	
 	</form>
