*better club display *cleaned up header *cleaned up footer *club banner *added listing service*

--- a/client/app/club/club.html
+++ b/client/app/club/club.html
@@ -1,19 +1,32 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<div class="container" style="padding-top:100px;">
-	<div class="col-md-12">
-	This is the club view.
-	{{stateParams}}
+<!-- BANNER HEADER -->
+<div style="position:relative;">
+  <header class="club-bg" id="banner">
+
+  </header>
+</div>
+<div class="container" >
+<h1>
+	<i class="glyphicon glyphicon-map-marker"></i>
+	Club Title Goes Here
+	<br>
+	<small>
+		Subtitle goes here
+	</small>
+</h1>
+<p>
+	The Address Goes Here
+</p>
+</div>
+<div style="background:#f9f9f9;">
+	<div class="container" style="padding:50px 0px 50px 0px">
+		<div class="row">
+			<div class="col-md-6">
+				<p>
+					Fruitcake lemon drops croissant sweet. Dessert jelly beans chocolate croissant wafer croissant. Chocolate bar brownie cotton candy macaroon jelly-o. Dessert jelly beans gummies marshmallow powder sweet. Pie candy canes fruitcake apple pie donut muffin halvah gummi bears. Tiramisu gingerbread fruitcake pie carrot cake marzipan muffin croissant. Candy biscuit chocolate cake sugar plum cotton candy candy canes sweet cheesecake. Lollipop chocolate cake toffee. Croissant macaroon dragée icing brownie. Macaroon halvah macaroon.
+				</p>
+			</div>
+		</div>
 	</div>
 </div>
-<hr>
-{{persons}}
-<hr>
-<div ng-repeat="c in listing.classes">
-	<h1>{{c}}</h1>
-	<input ng-model="c.title">
-	<hr>
-</div>
-<hr>
-<button ng-click="addSesh()">Add Sesh</button>
-{{listing}}
