--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/search/search.controller.js"></script>
           <script src="app/search/search.js"></script>
+          <script src="app/services/listings/listings.service.js"></script>
           <script src="app/submit_listing/submit_listing.controller.js"></script>
           <script src="app/submit_listing/submit_listing.js"></script>
           <script src="components/auth/auth.service.js"></script>
