--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -266,7 +266,7 @@
   </div>
 </div>
 
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
@@ -285,15 +285,23 @@
       </span>
     </p>
   </form>
-</div>
+</div> -->
 
 <footer class="footer">
   <div class="container">
     <div class="row" style="text-align:left;">
       <div class="col-md-4">
-        <a href="/submit_listing">
-          Submit a Club
-        </a>
+        <h4>Site Links</h4>
+        <p>
+          <a href="/login">
+            Login
+          </a>
+        </p>
+        <p>
+          <a href="/submit_listing">
+            Submit a Club
+          </a>
+        </p>
       </div>
       <div class="col-md-4">
       </div>
