--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -1,6 +1,31 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container" style="padding: 65px 0%;">
+  <h1>Clubs</h1>
+  <div class="row">
+  	<div class="col-md-6" style="padding-left:0px;">
+  		<h2>Needs Approval</h2>
+  		<ul class="list-group">
+		    <li class="list-group-item" ng-repeat="user in users">
+		        <strong>{{user.name}}</strong><br>
+		        <span class="text-muted">{{user.email}}</span>
+		        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+		    </li>
+		  </ul>
+  	</div>
+  	<div class="col-md-6" style="padding-right:0px;">
+  		<h2>Approved</h2>
+  		<ul class="list-group">
+		    <li class="list-group-item" ng-repeat="user in users">
+		        <strong>{{user.name}}</strong><br>
+		        <span class="text-muted">{{user.email}}</span>
+		        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+		    </li>
+		  </ul>
+  	</div>
+  </div>
+  <hr>
+  <h1>Users</h1>
   <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="user in users">
@@ -10,3 +35,4 @@
     </li>
   </ul>
 </div>
+
