--- a/client/app/club/club.html
+++ b/client/app/club/club.html
@@ -19,7 +19,7 @@
 	The Address Goes Here
 </p>
 </div>
-<div style="background:#f9f9f9;">
+<div style="background:#f9f9f9;border-top:1px solid #e9e9e9;">
 	<div class="container" style="padding:50px 0px 50px 0px">
 		<div class="row">
 			<div class="col-md-6">
