--- a/client/app/search/search.html
+++ b/client/app/search/search.html
@@ -3,7 +3,7 @@
 	<div class="row" style="position:relative;">
 		<div class="col-md-7" style="padding-left:0px;">
 			<div class="col-md-6" ng-repeat="club in clubs" >
-				<div style="background:#fff;padding:10px 15px;margin-bottom:20px;border:1px solid #f0f0f0;min-height:350px;">
+				<div style="background:#fff;padding:10px 15px;margin-bottom:20px;border:1px solid #e9e9e9;min-height:350px;">
 					<a ui-sref='club({country: "russia", city: "moscow",club:"rechnoi"})'>
 						<h1 style="margin-top:10px;">
 							<i class="fa fa-group"></i>
