More admin approval

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -293,13 +293,13 @@
       <div class="col-md-4">
         <h4>Site Links</h4>
         <p>
-          <a href="/login">
-            Login
+          <a href="/submit_listing">
+            Submit a Club
           </a>
         </p>
         <p>
-          <a href="/submit_listing">
-            Submit a Club
+          <a href="/login">
+            Admin
           </a>
         </p>
       </div>
