--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -1,38 +1,96 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<div class="container" style="padding: 65px 0%;">
-  <h1>Clubs</h1>
-  <div class="row">
-  	<div class="col-md-6" style="padding-left:0px;">
-  		<h2>Needs Approval</h2>
-  		<ul class="list-group">
-		    <li class="list-group-item" ng-repeat="user in users">
-		        <strong>{{user.name}}</strong><br>
-		        <span class="text-muted">{{user.email}}</span>
-		        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-		    </li>
-		  </ul>
-  	</div>
-  	<div class="col-md-6" style="padding-right:0px;">
-  		<h2>Approved</h2>
-  		<ul class="list-group">
-		    <li class="list-group-item" ng-repeat="user in users">
-		        <strong>{{user.name}}</strong><br>
-		        <span class="text-muted">{{user.email}}</span>
-		        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-		    </li>
-		  </ul>
-  	</div>
-  </div>
-  <hr>
-  <h1>Users</h1>
-  <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
-  <ul class="list-group">
-    <li class="list-group-item" ng-repeat="user in users">
-        <strong>{{user.name}}</strong><br>
-        <span class="text-muted">{{user.email}}</span>
-        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-    </li>
-  </ul>
+<div class="container" style="padding-top: 50px;">
+  <h1>
+    <i class="glyphicon glyphicon-book"></i>
+    Clubs
+  </h1>
+  <p>The delete club and club index api routes are restricted to users with the 'admin' role.</p>
 </div>
+<div style="background:#f9f9f9;border-top:1px solid #e9e9e9;border-bottom:1px solid #e9e9e9;">
+  <div class="container" >
+    <div>
+      <h2>Needs Approval</h2>
+      <ul class="list-group">
+        <li class="list-group-item" ng-if="!needsApproval.length">
+            <strong>None</strong><br>
+        </li>
+        <li class="list-group-item row" ng-repeat="club in needsApproval">
+          <div class="col-md-4" style="border-right:1px solid #e9e9e9;">
+            <h3 style="margin-top:0px;">
+              {{club.title}}
+              <br>
+              <small>
+                {{club.subtitle}}
+              </small>
+            </h3>
+            <p>
+              <i class="glyphicon glyphicon-map-marker"></i>
+              {{club.location}}
+            </p>
+            <hr>
+            <p>
+              {{club.description}}
+            </p>
+            <hr>
+            <p>
+              <button type="button" class="btn btn-primary">
+                <i class="glyphicon glyphicon-thumbs-up"></i>
+                Approve
+              </button>
+              <button type="button" class="btn btn-danger">
+                <i class="glyphicon glyphicon-thumbs-down"></i>
+                Reject
+              </button>
+            </p>
+          </div>
+          <div class="col-md-4" style="border-right:1px solid #e9e9e9;">
+            <h4 style="margin-top:0px;">
+              <i class="glyphicon glyphicon-time"></i>
+              Time Slots
+            </h4>
+            <hr>
+            <div class="row" ng-repeat="class in club.classes">
+              <div class="col-md-6">
+                {{class.day}}
+              </div>
+              <div class="col-md-6">
+                {{class.curriculum}}
+              </div>
 
+            </div>
+            {{club.classes}}
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h2>Approved</h2>
+      <ul class="list-group">
+        <li class="list-group-item" ng-repeat="club in approved">
+            <strong>{{club.title}}</strong><br>
+            <span class="text-muted">{{club.subtitle}}</span>
+            <a ng-click="" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="container" >
+  <h1>
+    <i class="glyphicon glyphicon-user"></i>
+    Users
+  </h1>
+  <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
+</div>
+<div style="background:#f9f9f9;border-top:1px solid #e9e9e9;padding:30px 0px;">
+  <div class="container" >
+    <ul class="list-group">
+      <li class="list-group-item" ng-repeat="user in users">
+          <strong>{{user.name}}</strong><br>
+          <span class="text-muted">{{user.email}}</span>
+          <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+      </li>
+    </ul>
+  </div>
+</div>
