*google maps directive *approved vs needs approved clubs for admin *added markers on admin maps *added markers on search map in moscow russia *updated club seed data

--- a/client/index.html
+++ b/client/index.html
@@ -78,6 +78,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/club/club.controller.js"></script>
           <script src="app/club/club.js"></script>
+          <script src="app/directives/googleMapDisplay/googleMapDisplay.directive.js"></script>
           <script src="app/googlePlacesInput/googlePlacesInput.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
