--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -7,75 +7,129 @@
   </h1>
   <p>The delete club and club index api routes are restricted to users with the 'admin' role.</p>
 </div>
+
 <div style="background:#f9f9f9;border-top:1px solid #e9e9e9;border-bottom:1px solid #e9e9e9;">
+
   <div class="container" >
+
     <div>
       <h2>Needs Approval</h2>
       <ul class="list-group">
+        <li class="list-group-item row" ng-repeat="club in needsApproval" style="margin:10px 0px;padding:0px;">
+          <div class="col-md-8" style="padding:10px 15px;">
+            <div class="col-md-6" style="padding-left:0px;border-right:1px solid #e9e9e9;">
+              <h3 style="margin-top:0px;">
+                {{club.title}}
+                <br>
+                <small>
+                  {{club.subtitle}}
+                </small>
+              </h3>
+              <p>
+                <i class="glyphicon glyphicon-map-marker"></i>
+                {{club.location}}
+              </p>
+              <hr>
+              <p>
+                {{club.description}}
+              </p>
+              <hr>
+              <p>
+                <button ng-click="approveClub(club)" type="button" class="btn btn-primary">
+                  <i class="glyphicon glyphicon-thumbs-up"></i>
+                  Approve
+                </button>
+                <button ng-click="rejectClub(club)" type="button" class="btn btn-danger">
+                  <i class="glyphicon glyphicon-thumbs-down"></i>
+                  Reject
+                </button>
+              </p>
+            </div>
+            <div class="col-md-6" style="padding-right:0px;">
+              <h4 style="margin-top:0px;">
+                <i class="glyphicon glyphicon-time"></i>
+                Time Slots ({{club.classes.length}})
+              </h4>
+              <hr>
+              <div class="row" ng-repeat="class in club.classes">
+                <div class="col-md-5" style="padding-left:0px;">
+                  <strong>{{class.day}}s</strong>
+                </div>
+                <div class="col-md-7" style="padding-right:0px;">
+                  <strong>Curriculum</strong>
+                  <p>
+                    {{class.curriculum}}
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4" style="padding:0px;border-left:1px solid #e9e9e9;">
+            <div style="height:250px;width:100%;" lat="{{club.lat}}" lng="{{club.lng}}" google-map-display>
+            </div>
+          </div>
+        </li>
         <li class="list-group-item" ng-if="!needsApproval.length">
             <strong>None</strong><br>
         </li>
-        <li class="list-group-item row" ng-repeat="club in needsApproval">
-          <div class="col-md-4" style="border-right:1px solid #e9e9e9;">
-            <h3 style="margin-top:0px;">
-              {{club.title}}
-              <br>
-              <small>
-                {{club.subtitle}}
-              </small>
-            </h3>
-            <p>
-              <i class="glyphicon glyphicon-map-marker"></i>
-              {{club.location}}
-            </p>
-            <hr>
-            <p>
-              {{club.description}}
-            </p>
-            <hr>
-            <p>
-              <button type="button" class="btn btn-primary">
-                <i class="glyphicon glyphicon-thumbs-up"></i>
-                Approve
-              </button>
-              <button type="button" class="btn btn-danger">
-                <i class="glyphicon glyphicon-thumbs-down"></i>
-                Reject
-              </button>
-            </p>
-          </div>
-          <div class="col-md-4" style="border-right:1px solid #e9e9e9;">
-            <h4 style="margin-top:0px;">
-              <i class="glyphicon glyphicon-time"></i>
-              Time Slots
-            </h4>
-            <hr>
-            <div class="row" ng-repeat="class in club.classes">
-              <div class="col-md-6">
-                {{class.day}}
-              </div>
-              <div class="col-md-6">
-                {{class.curriculum}}
-              </div>
-
-            </div>
-            {{club.classes}}
-          </div>
-        </li>
       </ul>
     </div>
+    
     <div>
       <h2>Approved</h2>
       <ul class="list-group">
-        <li class="list-group-item" ng-repeat="club in approved">
-            <strong>{{club.title}}</strong><br>
-            <span class="text-muted">{{club.subtitle}}</span>
-            <a ng-click="" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
+        <li class="list-group-item row" ng-repeat="club in approved" style="margin:10px 0px;padding:0px;">
+          <div class="col-md-8" style="padding:10px 15px;">
+            <div class="col-md-6" style="padding-left:0px;border-right:1px solid #e9e9e9;">
+              <h3 style="margin-top:0px;">
+                {{club.title}}
+                <br>
+                <small>
+                  {{club.subtitle}}
+                </small>
+              </h3>
+              <p>
+                <i class="glyphicon glyphicon-map-marker"></i>
+                {{club.location}}
+              </p>
+              <hr>
+              <p>
+                {{club.description}}
+              </p>
+            </div>
+            <div class="col-md-6" style="padding-right:0px;">
+              <h4 style="margin-top:0px;">
+                <i class="glyphicon glyphicon-time"></i>
+                Time Slots ({{club.classes.length}})
+              </h4>
+              <hr>
+              <div class="row" ng-repeat="class in club.classes">
+                <div class="col-md-5" style="padding-left:0px;">
+                  <strong>{{class.day}}s</strong>
+                </div>
+                <div class="col-md-7" style="padding-right:0px;">
+                  <strong>Curriculum</strong>
+                  <p>
+                    {{class.curriculum}}
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4" style="padding:0px;border-left:1px solid #e9e9e9;">
+            <div style="height:250px;width:100%;" lat="{{club.lat}}" lng="{{club.lng}}" google-map-display>
+            </div>
+          </div>
+        </li>
+        <li class="list-group-item" ng-if="!approved.length">
+            <strong>None</strong><br>
         </li>
       </ul>
     </div>
   </div>
 </div>
+
+
 <div class="container" >
   <h1>
     <i class="glyphicon glyphicon-user"></i>
