*Footer shows up on correct pages *Approve Listings Work *Added more listing seed generation

--- a/client/app/submit_listing/submit_listing.html
+++ b/client/app/submit_listing/submit_listing.html
@@ -129,3 +129,7 @@
 <!-- ng-repeat="" "egghead io for tutorial"
 
 admin page after submit listing-->
+
+
+<!-- FOOTER -->
+<div ng-include="'components/footer/footer.html'"></div>
