--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -88,7 +88,7 @@
 </div>
 
 <!-- TOP LOCATION -->
-<div class="container-fluid top-locations">
+<!-- <div class="container-fluid top-locations">
   <h1>
     <i class="glyphicon glyphicon-map-marker"></i>
     Trending Locations
@@ -136,10 +136,8 @@
       </p>
     </div>
   </div>
-</div>
-
-<hr>
-
+</div> -->
+<br>
 <!-- MORE INFO SECTION -->
 <div class="container-fluid more-info">
 
@@ -208,7 +206,7 @@
     <i class="glyphicon glyphicon-book"></i>
     Trending Clubs
     <br>
-    <small>Our most popular clubs across the globe</small>
+    <small>Our most popular clubs around the globe</small>
   </h1>
   <div class="row">
     <div class="col-md-3">
@@ -287,31 +285,5 @@
   </form>
 </div> -->
 
-<footer class="footer">
-  <div class="container">
-    <div class="row" style="text-align:left;">
-      <div class="col-md-4">
-        <h4>Site Links</h4>
-        <p>
-          <a href="/submit_listing">
-            Submit a Club
-          </a>
-        </p>
-        <p>
-          <a href="/login">
-            Admin
-          </a>
-        </p>
-      </div>
-      <div class="col-md-4">
-      </div>
-      <div class="col-md-4">
-      </div>
-    </div>
-    <hr>
-    <p>
-      Copyright © 2015 <b>LDS English Club</b>. All Rights Reserved.
-      This website is not owned by or affiliated with The Church of Jesus Christ of Latter-day Saints (sometimes called the Mormon or LDS Church). The views expressed herein do not necessarily represent the position of the Church. The views expressed by individual users are the responsibility of those users and do not necessarily represent the position of the Church. For the official Church websites, please visit LDS.org or Mormon.org.
-    </p>
-  </div>
-</footer>
+<!-- FOOTER -->
+<div ng-include="'components/footer/footer.html'"></div>
