--- a/client/app/search/search.html
+++ b/client/app/search/search.html
@@ -23,9 +23,9 @@
 								<strong>
 									{{class.day}}s
 								</strong>
-								{{class.start_time}}
+								{{class.start_time_str}}
 								-
-								{{class.end_time}}
+								{{class.end_time_str}}
 							</p>
 							<p class="description" >
 								{{club.description | limitTo : 300 : 0}}
