--- a/client/app/submit_listing/submit_listing.html
+++ b/client/app/submit_listing/submit_listing.html
@@ -1,10 +1,20 @@
 <!-- HEADER -->
 <div ng-include="'components/navbar/navbar.html'"></div>
-<div class="container" style="padding-top:50px;">
+<div class="container" style="padding-top:70px;">
+
+	<div class="alert alert-info" role="alert" ng-if="success">
+		<h3 style="margin:15px 20px 20px 20px;">
+			<strong>
+				<i class="glyphicon glyphicon-exclamation-sign"></i>
+				Attention:
+			</strong>
+			 Your Club has Been Successfully Submitted
+		</h3>
+	</div>
+
 	<form class="form" name="form" ng-submit="submitListing(form)" novalidate>
 		<h1>Submit a Club</h1>
 		<hr>
-
 		<div class="form-group col-md-6" style="padding-left:0px;" ng-class="{ 'has-success': form.title.$valid && submitted,'has-error': form.title.$invalid && submitted }">
 
 			<label class="control-label">
