--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -15,7 +15,7 @@
           </div>
           <div class="col-xs-6" style="text-align:justify;border-left:1px solid #fff;">
             <p>
-              Fruitcake lemon drops croissant sweet. Dessert jelly beans chocolate croissant wafer croissant. Chocolate bar brownie cotton candy macaroon jelly-o. Dessert jelly beans gummies marshmallow powder sweet.
+              Every journey begins with a single step. This journey is no different. The first step is simply a desire to learn. This desire will carry you off to new adventures.
             </p>
           </div>
         </div>
@@ -28,7 +28,7 @@
           </div>
           <div class="col-xs-6" style="text-align:justify;border-left:1px solid #fff;">
             <p>
-              Fruitcake lemon drops croissant sweet. Dessert jelly beans chocolate croissant wafer croissant. Chocolate bar brownie cotton candy macaroon jelly-o. Dessert jelly beans gummies marshmallow powder sweet.
+              Find a Club near you. Don't just look it up. Find the front door and walk in. Once you've found a Club, go back often.
             </p>
           </div>
         </div>
@@ -41,7 +41,7 @@
           </div>
           <div class="col-xs-6" style="text-align:justify;border-left:1px solid #fff;">
             <p>
-              Fruitcake lemon drops croissant sweet. Dessert jelly beans chocolate croissant wafer croissant. Chocolate bar brownie cotton candy macaroon jelly-o. Dessert jelly beans gummies marshmallow powder sweet.
+              Practice Practice Practice! Practice makes perfect. Don't be afraid to make mistakes. Each mistake brings you closer to perfection, but you won't make them if you don't practice. Open your mouth and make mistakes!
             </p>
           </div>
         </div>
